# shop-api-rest

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
api/: models.py  send_email.py  serializers.py  urls.py  views.py
auth/: serializers.py
config/: settings.py  urls.py
